--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "coffee-script": ">=1.4.0",
     "express": ">=3.0.3",
-    "mongoose": ">=3.4.0"
+    "mongoose": ">=3.4.0",
+    "less": ">=1.3.1"
   }
 }
