--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "coffee-script": ">=1.4.0",
     "express": ">=3.0.3",
     "mongoose": ">=3.4.0",
-    "less": ">=1.3.1"
+    "less": ">=1.3.1",
+    "hbs": ">=2.0.1"
   }
 }
